--- a/public_html/css/crypto.css
+++ b/public_html/css/crypto.css
@@ -9,3 +9,23 @@
 .smaller {
   font-size: 65% !important; 
 }
+
+.flag-list {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  background: #222;
+}
+
+.flag-list li {
+  width: 15vw;
+  margin: 0px;
+  list-style-type: none;
+}
+
+.flag-list img.flag {
+  width: 10vw;
+  height: auto;
+}
